# udemydl-glue

./: .gitignore  README.md  get-tpd.sh  glue.py  pyproject.toml  run-udemy-downloader.sh
